<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/container"
     android:orientation="vertical"
     android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="379dp"
            tools:layout_editor_absoluteX="8dp"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/containerCelsius">
        <TextView
                android:text="@string/celsius_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtCelsius" app:layout_constraintStart_toStartOf="@+id/editCelsius"
                android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/editCelsius"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/editCelsius" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" android:labelFor="@id/txtCelsius"/>
        <Button
                android:text="@string/convert_btn_celsius"
                android:layout_width="310dp"
                android:layout_height="46dp"
                android:id="@+id/btnConvertFarenheit" android:width="300sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:backgroundTint="#3F51B5"
                app:layout_constraintTop_toBottomOf="@+id/editCelsius"
                android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.495"
                android:textAlignment="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtResult"
                app:layout_constraintTop_toBottomOf="@+id/btnConvertFarenheit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/containerFarenheit" android:layout_marginTop="50sp">
        <TextView
                android:text="@string/farenheit_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtFarenheit" app:layout_constraintStart_toStartOf="@+id/editFarenheit"
                android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/txtResult"
                app:layout_constraintBottom_toTopOf="@+id/editFarenheit" app:layout_constraintVertical_bias="1.0"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/editFarenheit" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:importantForAutofill="no" android:labelFor="@id/txtCelsius"
                android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/txtResult"/>
        <Button
                android:text="@string/conver_btn_farenheit"
                android:layout_width="310dp"
                android:layout_height="46dp"
                android:id="@+id/btnConvertCelsius" android:width="300sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:backgroundTint="#3F51B5"
                android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintTop_toBottomOf="@+id/editFarenheit"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtResult2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btnConvertCelsius"/>
    </LinearLayout>
</LinearLayout>