<resources>
    <string name="app_name">DanielAguileraAndroid2019</string>
    <string name="title">Android 2019</string>
    <string name="score">Your score: %s</string>
    <string name="time_left">Time left %s</string>
    <string name="tap_me">TAP ME</string>
    <string name="hello_world">Hello World</string>
    <string name="timefighter">TIMEFIGHTER</string>
    <string name="name_repo">DanielAguileraAndroid2019 \n @eagleera</string>
    <string name="end_game">Game Over %s</string>
    <string name="tempConversion">Convert temperature</string>
    <string name="convert_temp">Convert</string>
    <string name="celsius">Celsius</string>
    <string name="celsius_placeholder">10</string>
    <string name="celsius_lbl">Celsius</string>
    <string name="convert_btn_celsius">Convert to Farenheit</string>
    <string name="farenheit_lbl">Farenheit</string>
    <string name="conver_btn_farenheit">Convert to Celsius</string>
    <string name="dialog">DIALOG</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_mostrar_dialogo">show dialog</string>
    <string name="dialog_management">Dialog Management</string>
    <string name="show_img">Show Image</string>
    <string name="close_app">Close Application</string>
    <string name="close_dialog">Close</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="you_sure_close_app">Are you sure you want to close the application?</string>
    <string name="playground">Playground</string>
    <string name="show_toast">Show Toast</string>
    <string name="do_loop">Do loop</string>
    <string name="imc" translatable="false">IMC</string>
    <string name="fill_all_fields">Please fill all the fields first</string>
    <string name="patient_good">Patient is in a good range of weight</string>
    <string name="patient_bad">Patient is not in a good range of weight</string>
    <string name="name">Name</string>
    <string name="lastname">last name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate_imc">Calculate IMC</string>
    <string name="scan">Scan</string>
    <string name="shake">Shake!!!</string>
    <string name="shake_game">Shake Game~</string>
    <string name="shared_pref">Shared Preferences</string>
    <string name="http_get">Http GET</string>
</resources>
