...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
                android:id="@+id/btnTempConversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="190dp"
                android:backgroundTint="#8BC34A"
                android:text="@string/tempConversion"
...
                android:text="@string/timefighter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnHelloWorld" />
        <Button
                android:id="@+id/btnDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="190sp"
                android:backgroundTint="#F44336"
                android:text="@string/dialog"
...
